--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.version>3.6.0</maven.compiler.version>
         <karate.version>0.8.0.RC2</karate.version>
+        <gatling.plugin.version>2.2.4</gatling.plugin.version>
     </properties>    
 
     <dependencies>
@@ -53,12 +54,32 @@
             <plugin>
                 <groupId>io.gatling</groupId>
                 <artifactId>gatling-maven-plugin</artifactId>
-                <version>2.2.4</version>
+                <version>${gatling.plugin.version}</version>
                 <configuration>
                     <simulationsFolder>src/test/java</simulationsFolder>
+                    <includes>mock.CatsKarateSimulation</includes>
                 </configuration>
             </plugin>            
         </plugins>        
-    </build>       
+    </build>
+
+    <profiles>
+        <profile>
+            <id>gatling</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.gatling</groupId>
+                        <artifactId>gatling-maven-plugin</artifactId>
+                        <version>${gatling.plugin.version}</version>
+                        <configuration>
+                            <simulationsFolder>src/test/java</simulationsFolder>
+                            <includes>mock.CatsGatlingSimulation</includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     
 </project>
