--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <maven.compiler.version>3.6.0</maven.compiler.version>
-        <karate.version>0.8.0.RC4</karate.version>
+        <karate.version>0.8.0</karate.version>
         <gatling.plugin.version>2.2.4</gatling.plugin.version>
     </properties>    
 
@@ -56,7 +56,7 @@
                 <version>${gatling.plugin.version}</version>
                 <configuration>
                     <simulationsFolder>src/test/java</simulationsFolder>
-                    <includes>mock.CatsKarateJmeterComparison</includes>
+                    <includes>mock.CatsGatlingSimulation</includes>
                 </configuration>
             </plugin>            
         </plugins>        
